feat: Deprecated MigrationStatusReport
* Deprecated MigrationStatusReport, use ArtifactStatusReport now
* fix some code smells